--- a/todo
+++ b/todo
@@ -2,3 +2,5 @@ To Do:
 
 Build out Renewable Diesel in renewables chapter
 Build a committment of traders chapter
+Update prices over time chapter for current premium charge on shipping certificates 26.5/100 of one cent per bushel per day
+Discuss variable storage rates in wheat and why we needed them. 
