--- a/05-Options1.qmd
+++ b/05-Options1.qmd
@@ -1,7 +1,6 @@
 # Introduction to Option Contracts
 
-<span style="color:red">Interested in more? Please let me know by</span> [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)! 
-
+[Interested in more? Please let me know by]{style="color:red"} [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)!
 
 **Highlights**
 
@@ -113,7 +112,7 @@ Most providers of option contract quotes will organize the information in a simi
 
 [![Quotes on January 2021 Soybean Futures Options Contracts, January Expiration](assets/Options1-quotes.PNG "Quotes on January 2021 Soybean Futures Options Contracts, January Expiration")](https://www.cmegroup.com/trading/agricultural/grain-and-oilseed/soybean_contract_specifications.html)
 
-Focus on the 1250 strike options that are highlighted in yellow. These options contracts are also quoted in eight of a cent increments, so the LAST price on the call option is 7'5, which means $7 + \frac{5}{8} = 7.625$ cents. Therefore, the cost of the 1250 call option that expires in January is $7.625*5000 = \$31.32$ since one soybean contract is for 5000 bushels. That seems pretty cheap, right. One thing to note is that the monthly options on soybean futures expire on the last Friday at least two business days before the last business day of the month prior to the contract month. If the Friday expiration would land on an exchange holiday the expiration will be the business day prior. All that means in the case of this option, it will expire on December 24th, 2020, just two days later than the day this table was created (notice the date updated column is for December 22, 2020). So, while it is right at the money, there is only two trading days left in the life of the option. What do you think happens the the value of any given option as it gets close to expiration? We will explore in detail in the next chapter.
+Focus on the 1250 strike options that are highlighted in yellow. These options contracts are also quoted in eight of a cent increments, so the LAST price on the call option is 7'5, which means $7 + \frac{5}{8} = 7.625$ cents. Therefore, the cost of the 1250 call option that expires in January is $7.625*5000 = \$381.25$ since one soybean contract is for 5000 bushels. That seems pretty cheap, right. One thing to note is that the monthly options on soybean futures expire on the last Friday at least two business days before the last business day of the month prior to the contract month. If the Friday expiration would land on an exchange holiday the expiration will be the business day prior. All that means in the case of this option, it will expire on December 24th, 2020, just two days later than the day this table was created (notice the date updated column is for December 22, 2020). So, while it is right at the money, there is only two trading days left in the life of the option. What do you think happens the the value of any given option as it gets close to expiration? We will explore in detail in the next chapter.
 
 Next, take a look at the LAST prices for the calls compared to the puts as you move down the table from 1200 strikes to the 1290 strike. In the case of the call options, the prices are increasing as you move down the table with the largest price option being the 1200 strike. Compare that to the put prices. The put prices are increasing as you look down the table from the 1200 strike to the 1290 strike. Take a second and think about why the 1200 call option is worth nearly 48 cents while the 1200 put option is worth less than half a cent.
 
