--- a/10-FundamentalAnalysisand.qmd
+++ b/10-FundamentalAnalysisand.qmd
@@ -1,6 +1,6 @@
 # Balance Sheet Analysis
 
-<span style="color:red">Interested in more? Please let me know by</span> [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)! 
+[Interested in more? Please let me know by]{style="color:red"} [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)!
 
 **Highlights**
 
@@ -71,23 +71,23 @@ Most fundamental analyses rely on maintaining balance sheets of a commodity for 
 
 Balance sheet analysis is often organized by marketing year. Since production happens once per year, the marketing year is defined to begin in the first month the commodity is harvested and ends with the following year's harvest. The table below makes note the month on which marketing years begin for several crops.
 
-| Crop                   | Beginning of Marketing Year - First Month of Harvest |
-|:-----------------------|:-----------------------------------------------------|
-| Corn                   | September                                            |
-| Soybeans               | September                                            |
-| Spring Wheat (Chicago) | August                                               |
-| Winter Wheat (KC)      | July                                                 |
+| Crop | Beginning of Marketing Year - First Month of Harvest |
+|:---|:---|
+| Corn | September |
+| Soybeans | September |
+| Spring Wheat (Chicago) | August |
+| Winter Wheat (KC) | July |
 
 : Table 1. Beginning of Marketing Year by Crop. (Source [NASS Timetables](http://www.nass.usda.gov/Publications/National_Crop_Progress/))
 
 Forecasting supply and demand for any given marketing year begins well before harvest - nearly a year in advance, in fact. Table 2 below follows the typical forecasting schedule with the 2017/2018 marketing year. Note that is for the marketing year that begins with harvest in September of 2016.
 
-| Timeline       | Forecasting Focus                                                                                                                |
-|:---------------|:---------------------------------------------------------------------------------------------------------------------------------|
-| Fall 2016      | The first forecasts of supply and use based on , *trend forecasts*, *recent history*, *economic relationships*                   |
-| Spring 2017    | Update supply forecasts based on USDA acreage surveys.                                                                           |
-| Summer 2017    | Update supply forecasts based on weather and USDA crop and stocks reports                                                        |
-| Fall 2017      | Update supply forecasts as yield uncertainty is resolved through harvest reports and USDA production reports                     |
+| Timeline | Forecasting Focus |
+|:---|:---|
+| Fall 2016 | The first forecasts of supply and use based on , *trend forecasts*, *recent history*, *economic relationships* |
+| Spring 2017 | Update supply forecasts based on USDA acreage surveys. |
+| Summer 2017 | Update supply forecasts based on weather and USDA crop and stocks reports |
+| Fall 2017 | Update supply forecasts as yield uncertainty is resolved through harvest reports and USDA production reports |
 | \- Summer 2018 | Continue to update supply forecasts based on USDA production revisions, southern hemisphere production, stocks, and use reports. |
 
 : Table 2: Forecasting Calendar for 2017/2018 Marketing Year
